...
    var body: some View {
        VStack {
            List() {
                Section {
                    HStack {
                        VStack(alignment: .leading) {
                            Text("Billy Strings").font(.title).fontWeight(.bold)
                            Text("Rex Theatre, Fairfax, VA").font(.body)
                            Text("2022-05-07").font(.body)
                        }
                        
                        Spacer()
                    }
...
