...
        
        NotificationCenter.default.addObserver(forName: .BandDidChange, object: nil, queue: .main) { notification in
            let band = notification.object as! Band
            self.topPerfsVC.band = band
        }
        
        navigationController.tabBarItem = UITabBarItem(title: "Browse", image: UIImage(icon: .musicNoteList), tag: 1)
        restore()
    }
    
    
    
    func restore() {
...
