...
        onChangeBandTap()
    }

    func setupViews() {
        // configure navigation
        navigationItem.title = "My Shows"
        navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Change band", style: .plain, target: self, action: #selector(changeBand))
        navigationItem.leftBarButtonItem = UIBarButtonItem(title: storage.band.name, style: .plain, target: self, action: #selector(changeBand))
        
        extendedLayoutIncludesOpaqueBars = true
        
        collectionView.refreshControl = refreshControl
        refreshControl.addTarget(self, action: #selector(refresh), for: .valueChanged)
...
